--- a/memo/1126 memo.md
+++ b/memo/1126 memo.md
@@ -10,6 +10,7 @@
   - Problem 1의 일부 어색한 표현을 수정하고 행간을 수정했습니다.
   - Problem 1에서 pointer-events 속성을 이용해 버튼을 마우스로는 누르지 못하도록 설정하는 방법을 찾았습니다.
     - 클릭 방지를 위해 복잡하게 div를 겹칠 필요가 없다! 와!!
+	- 근데 결국 tabindext 순서 제어에 필요해서 popup을 응용해 맨 위에 div 하나 깔았음... css calc 함수가 경우에 따라 작동하지 않을 수 있음
   - Problem 2에서 주요 주제인 "웹 페이지 가독성"과 관련이 없는 내용을 삭제하였습니다.
   - Problem 2에서 문제 4개가 전부 정답으로 보일 여지가 있기 때문에 문제의 내용을 조금 수정하였습니다.
 
